--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "itechart-lab-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -20,12 +20,18 @@
     "@types/node": "^16.18.11",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-router-dom": "^5.3.3",
+    "chart.js": "^4.4.0",
     "classnames": "^2.3.2",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
